nginx-ingress/app1.yaml
### httpd deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  labels:
    app1: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app1: zen1
  template:
    metadata:
      labels:
        app1: zen1
    spec:
      containers:
      - name: httpd
        image: httpd
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: zen-service-1
spec:
  type: NodePort
  selector:
    app1: zen1
  ports: 
    - port: 80
      targetPort: 80
      nodePort: 30008
