nginx-ingress/app2.yaml
### nginx deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app1: devops1
  template:
    metadata:
      labels:
        app1: devops1
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-2
spec:
  type: NodePort
  selector:
    app1: devops1
  ports: 
    - port: 80
      targetPort: 80
      nodePort: 30009
