nginx-ingress/app3.yaml
### traefik deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  labels:
    app3: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app3: zen3
  template:
    metadata:
      labels:
        app3: zen3
    spec:
      containers:
      - name: traefik
        image: traefik
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-3
spec:
  type: NodePort
  selector:
    app3: zen3
  ports: 
    - port: 80
      targetPort: 80
      nodePort: 30010
